This commit is for stretch goal: fixed nav

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -111,6 +111,9 @@ h1 {
 }
 .nav-section {
   bottom-border: 1px solid black;
+  position: fixed;
+  top: 0;
+  }
 }
 .FeatAbout {
   padding-top: 5%;
